# multimin

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  README_code.ipynb  TODO.md  WHATSNEW.md  paper-codes.ipynb  paper.bib  paper.md  pyproject.toml  pytest.ini  readme_debug.rst  rename_notebook_vars.py  requirements-dev.txt  requirements.txt  setup.py  test-multimin.ipynb  test_fit_cmnd_init-1cmndNone_42bb7.pkl  test_output.txt
.agent/rules/: development.md
.github/workflows/: draft-pdf.yml
docs/: README.md  cmog.rst  conf.py  examples.rst  index.rst  multimin.rst  orbit.rst  plot.rst  population.rst  requirements.txt  util.rst
docs/examples/: multimin_asteroids_application.ipynb  multimin_cmnd_gmm.ipynb  multimin_cmnd_quickstart.ipynb  multimin_cmnd_tutorial.ipynb  multimin_cmog.ipynb  multimin_density_plot_tutorial.ipynb  multimin_finite_domain_quickstart.ipynb  multimin_functions_tutorial.ipynb  (+6 more)
examples/: fit_1d_bounded.py  index.rst  multimin_asteroids_application.ipynb  multimin_cmnd_gmm.ipynb  multimin_cmnd_quickstart.ipynb  multimin_cmnd_tutorial.ipynb  multimin_cmog.ipynb  multimin_density_plot_tutorial.ipynb  multimin_finite_domain_quickstart.ipynb  multimin_functions_tutorial.ipynb  multimin_indepth.ipynb  multimin_mog_gmm.ipynb  multimin_mog_quickstart.ipynb  multimin_mog_tutorial.ipynb  multimin_quickstart.ipynb  multimin_truncated_tutorial.ipynb  paper-codes.ipynb  test-asteroids.py
jats/: paper.jats
legacy/: README.md  multimin.py
products/: fit-multiple-bound_mus-20cmndNone_9d1e7.pkl  fit-multiple-bounds.pkl
(+35 files in other folders)
